--- a/Web.config
+++ b/Web.config
@@ -7,6 +7,7 @@
     <add key="SiteName" value="Twilio Call Manager"/>
     <add key="AdminTitle" value="Twilio Call Manager : Administrator"/>
     <add key="UserTitle" value="Twilio Call Manager"/>
+    <add key="HttpsSiteUrl" value="https://compudimeco.web713.discountasp.net/callsms/"/>
     <add key="SiteUrl" value="http://compudimeco.web713.discountasp.net/callsms/"/>
     <add key="BasePath" value="http://compudimeco.web713.discountasp.net/callsms/"/>
     <add key="AdminPageSize" value="20"/>
